appId: com.example.rnziparchive.playground
---
- launchApp
- runFlow:
    when:
      visible: "http://localhost:8081"
    commands:
      - tapOn: "http://localhost:8081"
      - runFlow:
          when:
            visible: "Continue"
          commands:
            - tapOn: "Continue"
      - runFlow:
          when:
            visible: "Reload"
          commands:
            - tapOn:
                id: "closeButton"
- extendedWaitUntil:
    visible: "Zip Operations"
    timeout: 45000
